src/objects/Customer_Commitment__c.object
<CustomObject>
    <fields>
        <fullName>Coverage_Area__c</fullName>
        <label>Coverage Area</label>
        <picklist>
            <picklistValues>
                <fullName>BillingCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Intelligence for InsuranceSuite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ClaimCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Data Managment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Portals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISO Templates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Live</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Observation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PolicyCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Predictive Analytics for Claims</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Predictive Analytics for Profitability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Predictive Analytics Model Viewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Predictive Analytics Scoring Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reinsurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shadow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Underwriting Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Consulting</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Customer_Committed_Hours__c</fullName>
        <formula>IF(Event_Hours__c == 0,Sales_Event__r.Event_Hours__c, Event_Hours__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Committed Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Hours__c</fullName>
        <inlineHelpText>This should only be set if the person is in front of the customer for a different number of hours than the hours specified on the event.</inlineHelpText>
        <label>Event Hours (Partial)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GW_Public_ID__c</fullName>
        <externalId>true</externalId>
        <label>GW Public ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Event__c</fullName>
        <label>Sales Event</label>
        <referenceTo>Sales_Event__c</referenceTo>
        <relationshipLabel>Customer Commitments</relationshipLabel>
        <relationshipName>Customer_Commitments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Who__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Who</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Commitments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Customer Commitment</label>
    <nameField>
        <label>Customer Commitment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Commitments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>